--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://lh3.googleusercontent.com/pw/AM-JKLVTcMapUCSK9K5f9NnM01wwi2t8aMl6_Eabrl2c8qKCSsDVtmFh4jl7n2UFhtunQzUc1zKC9xQGbTmrO2anj3RohywDISjmWa76Z2GEBQfsyYXpsMicVhbPT2OizjklU0Ow2ZOeXpahbeT-eYeiCCXZ=s504-no?authuser=1" alt="">
         <h1 class="nome">JirayaSan</h1>
         <div class="links">
-        <a href="https://www.instagram.com/pedro.tavaaress/" class="redes">INTAGRAM</a>
+        <a href="https://www.instagram.com/pedroo_taavaress/" class="redes">INTAGRAM</a>
         <a href="https://twitter.com/pedro_tor4" class="redes">TWITTER</a>
         <a href="https://github.com/JirayaSann3" class="redes">GITHUB</a>
         <a href="https://discord.gg/uqHWBYsA" class="redes">DISCORD</a>
